--- a/package.json
+++ b/package.json
@@ -8,5 +8,17 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/progress": "^0.2.7",
+        "chart.js": "^4.4.1",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.10.2",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.2.1",
+        "sweetalert2": "^11.4.36"
     }
 }
